src/orgpad/styles/map_component.less
@import "circle_button.less";

.map-view {
  width: 100%;
  flex-grow: 1;
  order: 1;
  position: relative;

  overflow-x: hidden;
  overflow-y: hidden;

  .map-view-canvas {
    position: absolute;

    .map-view-child {
      position: absolute;
      display: flex;
      flex-direction: column;
    }

    .link-control {
        .circle-button-base;
        width: 20px;
        height: 20px;
    }

    .leader-control {
        border-radius: 100%;
        cursor: pointer;
        background-color: rgba(104, 174, 240, 0.1);
        width: 20px;
        height: 20px;
        &:hover {
            background-color: rgba(120, 190, 255, 0.1);
        }
    }

    .select-check {
        position: absolute;
        right: 5px;
        top: 5px;
    }
  }

  .map-view-unit-selected {
      position: absolute;
      border-bottom: 2px dashed #e42c2c;
      border-left: 2px dashed #e42c2c;
      border-right: 2px dashed #e42c2c;
      margin-top: 2px;
      z-index: 1;

      &.simple {
          border-top: 2px dashed #e42c2c;
      }

      .resize-handle-corner {
          position: absolute;
          bottom: 0px;
          cursor: nwse-resize;
          right: 0px;
          width: 20px;
          height: 20px;
          z-index: 3;
      }

      .resize-handle-bottom {
          position: absolute;
          bottom: 0px;
          cursor: row-resize;
          left: 0px;
          width: 100%;
          height: 20px;
          z-index: 2;
      }
  }

  .slider {
      input {
          margin: 5px;
      }

      .val {
          width: 30px;
          position: relative;
          top: -5px;
      }
  }

  .map-view-border-edit- {
      border: 2px solid #cccccc;
      padding: 5px;
      width: 185px;
      background-color: white;

      .center {
          text-align: center;
          margin-bottom: 5px;
      }

      .fake-center {
          margin-left: 12px;
          margin-right: 12px;
          margin-bottom: 5px;
      }
  }

  .map-view-border-edit {
      background-color: white;

      .center {
          text-align: center;
          margin-bottom: 5px;
      }

      .fake-center {
          margin-left: 20px;
          margin-right: 20px;
          margin-bottom: 5px;
          width: 80%;
      }
  }

  .selection-box {
      border: 2px solid #cccccc;
      position: absolute;
  }

}


.map-tuple-sheet-number {
    z-index: 1;
    position: absolute;
    bottom: 20px;
    right: 20px;

    background-color: white;
}

.map-tuple {
    width: 100%;
    flex-grow: 1;
    order: 1;
    display: flex;
    flex-direction: column;
}

.map-tuple-clicker-left {
    width: 10px;
    height: 100%;
    position: absolute;
    background-color: rgba(200, 200, 200, 0.1);
    left: 0;
    top: 0;
}

.map-tuple-clicker-right {
    width: 10px;
    height: 100%;
    position: absolute;
    background-color: rgba(200, 200, 200, 0.1);
    right: 0;
    top: 0;
}

.map-tuple-menu {
    z-index: 1;
    position: absolute;
    top: 70px;
    right: 20px;

    background-color: white;
}

.map-selected-unit {
    width: 100%;
    max-height: 200px;
    // height: 200px;
    // border: 1px solid black;
    overflow-x: hidden;
    overflow-y: auto;
    position: relative;
    border-bottom: 3px double;

    &:hover {
        background-color: rgba(120, 190, 255, 0.1);
    }

    // &:last-child {
    //    border-bottom: 0px;
    // }
}

.map-props-toolbar {
    position: absolute;
    right: 0px;
    top: 10%;
    // height: 80%;
    width: 205px;
    border: 1px solid black;
    padding: 10px;
    overflow-y: auto;
    overflow-x: hidden;
    background-color: white;

    & > div {
        margin-bottom: 20px;
    }
}

